--- a/roles/fedcloud-catchall-ops/tasks/cloud-info.yaml
+++ b/roles/fedcloud-catchall-ops/tasks/cloud-info.yaml
@@ -16,24 +16,27 @@
 - name: cloud-info config directory
   vars:
     site: "{{ lookup('file', item) | from_yaml }}"
+    filename: "{{ item | basename | splitext | first }}"
   template:
     src: site-info.yaml.j2
-    dest: /etc/fedcloud/cloud-info/{{ site.gocdb }}.yaml
+    dest: /etc/fedcloud/cloud-info/{{ filename }}.yaml
   with_fileglob:
   - "sites/*.yaml"
 
 - name: cloud info env 
   vars:
     site: "{{ lookup('file', item) | from_yaml }}"
+    filename: "{{ item | basename | splitext | first }}"
   template:
     src: cloud-info.env.j2 
-    dest: /etc/fedcloud/cloud-info/{{ site.gocdb }}.env
+    dest: /etc/fedcloud/cloud-info/{{ filename }}.env
   with_fileglob:
   - "sites/*.yaml"
 
 - name: cloud info cron
   vars:
     site: "{{ lookup('file', item) | from_yaml }}"
+    filename: "{{ item | basename | splitext | first }}"
   cron:
     name: cloud-info-provider {{ site.gocdb }}
     weekday: "*"
@@ -41,10 +44,10 @@
     hour: "*"
     user: root
     job: >
-      flock -n -w 250 /var/lock/cloud-info/{{ site.gocdb }} 
+      flock -n -w 250 /var/lock/cloud-info/{{ filename }} 
       docker run -v /etc/fedcloud:/etc/fedcloud:ro
-      --env-file /etc/fedcloud/cloud-info/{{ site.gocdb }}.env
-      {{ cloud_info_image }} >> /var/log/cloud-info/{{ site.gocdb }}.log 2>&1
-    cron_file: "cloud-info-{{ site.gocdb }}"
+      --env-file /etc/fedcloud/cloud-info/{{ filename }}.env
+      {{ cloud_info_image }} >> /var/log/cloud-info/{{ filename }}.log 2>&1
+    cron_file: "cloud-info-{{ filename | replace('.', '_') }}"
   with_fileglob:
   - "sites/*.yaml"
