--- a/sites/TR-FC1-ULAKBIM.yaml
+++ b/sites/TR-FC1-ULAKBIM.yaml
@@ -1,5 +1,5 @@
 gocdb: TR-FC1-ULAKBIM
-endpoint: https://fcctrl.ulakbim.gov.tr:5000
+endpoint: https://fcctrl.ulakbim.gov.tr:5000/v3
 vos:
   vo.access.egi.eu:
     auth:
