--- a/sites/fedcloud.srce.hr.yaml
+++ b/sites/fedcloud.srce.hr.yaml
@@ -1,9 +1,10 @@
-gocdb: fedcloud.srce.hr
 endpoint: https://cloud.cro-ngi.hr:5000/v3/
+gocdb: fedcloud.srce.hr
 vos:
-  dteam:
-    auth:
-      project_id: 8fbe7b83bfa7420ea75bbceb761ad079
-  fedcloud.egi.eu:
-    auth:
-      project_id: 662f67f51f4c451987e62b17820a2bc5
+- auth:
+    project_id: 8fbe7b83bfa7420ea75bbceb761ad079
+  name: dteam
+- auth:
+    project_id: 662f67f51f4c451987e62b17820a2bc5
+  name: fedcloud.egi.eu
+
