--- a/sites/INFN-PADOVA-STACK.yaml
+++ b/sites/INFN-PADOVA-STACK.yaml
@@ -1,9 +1,9 @@
-gocdb: INFN-PADOVA-STACK
 endpoint: https://egi-cloud.pd.infn.it:443/v3
+gocdb: INFN-PADOVA-STACK
 vos:
-  vo.access.egi.eu:
-    auth:
-      project_id: 5ddb325ca8c2495abfd4e8f230bcd51a
-  dteam:
-    auth:
-      project_id: 142e67568077410c88587fc309864310
+- auth:
+    project_id: 142e67568077410c88587fc309864310
+  name: dteam
+- auth:
+    project_id: 5ddb325ca8c2495abfd4e8f230bcd51a
+  name: vo.access.egi.eu
