--- a/sites/CETA-GRID.yaml
+++ b/sites/CETA-GRID.yaml
@@ -1,15 +1,15 @@
-gocdb: CETA-GRID
 endpoint: https://controller.ceta-ciemat.es:5000/v3/
+gocdb: CETA-GRID
 vos:
-  eosc-synergy.eu:
-    auth:
-      project_id: 0819ebde41fd4c0d95560fc23dc575a4
-  covid19.eosc-synergy.eu:
-    auth:
-      project_id: e3716e9fb6a241fd91469a6ee05358a1
-  dteam:
-    auth:
-      project_id: 20d255d3226e47e48d5b5b8c1af2ee49
-  fedcloud.egi.eu:
-    auth:
-      project_id: aa7f62b244c946038c093d0bf05827a1
+- auth:
+    project_id: e3716e9fb6a241fd91469a6ee05358a1
+  name: covid19.eosc-synergy.eu
+- auth:
+    project_id: 20d255d3226e47e48d5b5b8c1af2ee49
+  name: dteam
+- auth:
+    project_id: 0819ebde41fd4c0d95560fc23dc575a4
+  name: eosc-synergy.eu
+- auth:
+    project_id: aa7f62b244c946038c093d0bf05827a1
+  name: fedcloud.egi.eu
