--- a/sites/INFN-CATANIA-STACK.yaml
+++ b/sites/INFN-CATANIA-STACK.yaml
@@ -1,18 +1,18 @@
-gocdb: INFN-CATANIA-STACK
 endpoint: https://stack-server.ct.infn.it:35357/v3
+gocdb: INFN-CATANIA-STACK
 vos:
-  fedcloud.egi.eu:
-    auth:
-      project_id: 2669272fcc0c4c6f842a1431eaa5456e
-  training.egi.eu:
-    auth:
-      project_id: 00982464978c4b61a5f570e315251f02
-  vo.access.egi.eu:
-    auth:
-      project_id: 4b9f8d6ab992452ca40921b21984008a
-  vo.notebooks.egi.eu:
-    auth:
-      project_id: 745695ccd17042fabf96d2410a4278d9
-  vo.obsea.es:
-    auth:
-      project_id: f182c5b57816472293dd7758a6c1d4da
+- auth:
+    project_id: 2669272fcc0c4c6f842a1431eaa5456e
+  name: fedcloud.egi.eu
+- auth:
+    project_id: 00982464978c4b61a5f570e315251f02
+  name: training.egi.eu
+- auth:
+    project_id: 4b9f8d6ab992452ca40921b21984008a
+  name: vo.access.egi.eu
+- auth:
+    project_id: 745695ccd17042fabf96d2410a4278d9
+  name: vo.notebooks.egi.eu
+- auth:
+    project_id: f182c5b57816472293dd7758a6c1d4da
+  name: vo.obsea.es
