--- a/sites/Kharkov-KIPT-LCG2.yaml
+++ b/sites/Kharkov-KIPT-LCG2.yaml
@@ -1,6 +1,6 @@
-gocdb: Kharkov-KIPT-LCG2
 endpoint: https://cloud.kipt.kharkov.ua:5000/v3
+gocdb: Kharkov-KIPT-LCG2
 vos:
-  fedcloud.egi.eu:
-    auth:
-      project_id: 5bd225f562da4eb99bcc407a692033c2
+- auth:
+    project_id: 5bd225f562da4eb99bcc407a692033c2
+  name: fedcloud.egi.eu
