--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -2,17 +2,29 @@ endpoint: https://identity.cloud.muni.cz/v3
 gocdb: CESNET-MCC
 vos:
 - auth:
-    project_id: 192e87f713474117a2a22704ac4da1a2
-  name: covid19.eosc-synergy.eu
+    project_id: eca73ad6a84d4c0088063505c36349ab
+  name: biomed
+- auth:
+    project_id: 2ce965f162c9434cb21ac25f3b05bd9f
+  name: chipster.csc.fi
 - auth:
     project_id: 10b972eed97940089b234f6257d7db72
   name: demo.fedcloud.egi.eu
 - auth:
+    project_id: 4216152b63f34cc28401bb9bbd40b0bf
+  name: drihm.eu
+- auth:
     project_id: 0aa5b696969c42988b18beda3f85b885
   name: dteam
 - auth:
-    project_id: d85ca93c937a4a97adf134ec2593296d
-  name: eosc-synergy.eu
+    project_id: 723f0655bb484ea892249ac7183c9581
+  name: egi-services
+- auth:
+    project_id: 8f4f75b011fe44ef99105a32817d2fc0
+  name: enmr.eu
+- auth:
+    project_id: 73ee46f9a64243d2955ecb07e4f28289
+  name: ops
 - auth:
     project_id: d868dfd63a674d94bbd9d9b7b54443e3
   name: panosc.eu
@@ -23,6 +35,12 @@ vos:
     project_id: eae2aa7f26334104906106bca4b82ae3
   name: training.egi.eu
 - auth:
+    project_id: 5fc606127d2d4499b959ff79219c7144
+  name: vo.clarin.eu
+- auth:
+    project_id: 90f5ae8fb33e45888be97f152bc2f67b
+  name: vo.elixir-europe.org
+- auth:
     project_id: b953842bf4204dc98054f6c3ae581cb5
   name: vo.emphasisproject.eu
 - auth:
@@ -32,8 +50,20 @@ vos:
     project_id: 24869cfe0e094f59a3110429e068eef2
   name: vo.geoss.eu
 - auth:
+    project_id: 25cb49baedbf40a194729ff6802c8491
+  name: vo.indigo-datacloud.eu
+- auth:
     project_id: 50fc58ed66a14106b40b9c6d7d9af86c
   name: vo.max-centre.eu
 - auth:
     project_id: 081396a827c94f3da0c922cf6d8fb7f7
   name: vo.nextgeoss.eu
+- auth:
+    project_id: d85ca93c937a4a97adf134ec2593296d
+  name: eosc-synergy.eu
+- auth:
+    project_id: 192e87f713474117a2a22704ac4da1a2
+  name: covid19.eosc-synergy.eu
+- auth:
+    project_id: 89140661b6be4ef281ab7a67d4c83e0c
+  name: vo.europlanet-vespa.eu
