--- a/cloud-info/Dockerfile
+++ b/cloud-info/Dockerfile
@@ -1,18 +1,15 @@
 FROM python:3
 
-# Pip install directly does not install the data files in etc?
-# TODO: pin the cloud-info-provider version
-RUN git clone https://github.com/EGI-Foundation/cloud-info-provider.git /tmp/cloud-info-provider && \
-    pip install -r /tmp/cloud-info-provider/requirements.txt && \
-    cd /tmp/cloud-info-provider && python setup.py install && \
-    rm -rf /tmp/cloud-info-provider
 
-# OpenStack should be a different cloud-info-provider package...
-RUN pip install python-keystoneclient \
-                python-novaclient \
-                python-glanceclient \
-                keystoneauth1
+ARG CLOUD_INFO_VERSION=0.12.1
 
+# hadolint ignore=DL3013
+RUN pip install "git+https://github.com/EGI-Foundation/cloud-info-provider.git@$CLOUD_INFO_VERSION" \
+                python-glanceclient python-novaclient python-keystoneclient keystoneauth1
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+# hadolint ignore=DL3015, DL3008
 RUN curl -Ls \
         https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 \
         | apt-key add - \
@@ -22,7 +19,7 @@ RUN curl -Ls \
     && apt-get install -y jq ca-policy-egi-core \
     && rm -rf /var/lib/apt/lists/*
 
-RUN cat /etc/grid-security/certificates/*.pem >> $(python -m requests.certs)
+RUN cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
 
 COPY ams-wrapper.sh /usr/local/bin/ams-wrapper.sh
 COPY publisher.sh /usr/local/bin/publisher.sh
