--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -20,3 +20,4 @@ jobs:
           check-modified-files-only: "yes"
           use-quiet-mode: "yes"
           use-verbose-mode: "yes"
+          base-branch: "master"
