--- a/sites/CETA-GRID.yaml
+++ b/sites/CETA-GRID.yaml
@@ -13,3 +13,12 @@ vos:
 - auth:
     project_id: aa7f62b244c946038c093d0bf05827a1
   name: fedcloud.egi.eu
+- auth:
+    project_id: 38414631e27c485eae87f6dcb3082873
+  name: worsica.vo.incd.pt
+- auth:
+    project_id: 91b83525d63c48d78740e6799cfed2c4
+  name: o3as.data.kit.edu
+- auth:
+    project_id: 9d234e59f4734ebdaf1e271067e40978
+  name: lagoproject.net
