--- a/deploy/cloud-init.yaml
+++ b/deploy/cloud-init.yaml
@@ -25,6 +25,7 @@ packages:
 write_files:
 - content: |
     #!/bin/sh
+    set -e
 
     mkdir -p /var/tmp/egi
     cd /var/tmp/egi || exit
@@ -35,11 +36,12 @@ write_files:
     COMMIT_SHA="%REF%"
 
     # get the repo code and untar at cwd, this may fail if the token expired (e.g. VM rebooted)
-    # still the deploy should be-executed just in case something is missing
+    # still the deploy should be-executed just in case something is missing, so adding a true
+    # at the end
     curl -L -H "Authorization: token $OAUTH_TOKEN" \
             -H "Accept: application/vnd.github.v3+raw" \
             "https://api.github.com/repos/EGI-Foundation/fedcloud-catchall-deployment/tarball/$COMMIT_SHA" | \
-            tar xz --strip=1
+            tar xz --strip=1 || true
     cd deploy
     echo "%ANSIBLE_SECRETS%" | base64 -d > ./secrets.yaml
     ./deploy.sh $OAUTH_TOKEN $COMMIT_SHA $SLACK_WEBHOOK_URL
