--- a/sites/Kharkov-KIPT-LCG2.yaml
+++ b/sites/Kharkov-KIPT-LCG2.yaml
@@ -4,3 +4,6 @@ vos:
 - auth:
     project_id: 5bd225f562da4eb99bcc407a692033c2
   name: fedcloud.egi.eu
+- auth:
+    project_id: fea772cdfe4f4568bc996f0464f57882
+  name: ops
