--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -10,6 +10,7 @@ vos:
   bioexcel:
   bioisi:
   biomed:
+    auth: "{{ robot_sa }}"
   blazarmonitoring.asi.it:
     auth: "{{ robot_sa }}"
   chipster.csc.fi:
