--- a/sites/IFCA-LCG2.yaml
+++ b/sites/IFCA-LCG2.yaml
@@ -2,14 +2,23 @@ endpoint: https://api.cloud.ifca.es:5000/v3/
 gocdb: IFCA-LCG2
 vos:
 - auth:
+    project_id: 403847ab342247b89b0ba2ede2c82b39
+  name: acc-comp.egi.eu
+- auth:
     project_id: d602bda767b4490a82b2f62f9347a0f5
   name: biinsight.eosc-hub.eu
 - auth:
     project_id: e14972ead3154810a5941e511afc208c
   name: covid19.eosc-synergy.eu
 - auth:
+    project_id: c7db08b907ef4f0fae73bdd6587bc79e
+  name: cryoem.instruct-eric.eu
+- auth:
     project_id: 9170e65775964a3ba6b18d83a2ad1968
   name: d4science.org
+- auth:
+    project_id: 36fb9668c47148d9b1bedba88eb2460a
+  name: deep-hybrid-datacloud.eu
 - auth:
     project_id: 2a7e2cd4b6dc4e609dd934964c1715c6
   name: demo.fedcloud.egi.eu
@@ -23,11 +32,17 @@ vos:
     project_id: 3b9754ad8c6046b4aec43ec21abe7d8c
   name: eosc-synergy.eu
 - auth:
+    project_id: 999f045cb1ff4684a15ebb338af69460
+  name: fedcloud.egi.eu
+- auth:
     project_id: 352db003073549749351fad26cd55074
   name: o3as.data.kit.edu
 - auth:
     project_id: 4ebc1727dbed465c8ef72617a9075b4f
   name: opencoast.eosc-hub.eu
+- auth:
+    project_id: a372c1e2fba040e58fd0cb524a3ccd34
+  name: ops
 - auth:
     project_id: f1d0308880134d04964097524eace710
   name: training.egi.eu
@@ -40,6 +55,3 @@ vos:
 - auth:
     project_id: 13c11c4073f4456fac7df84c4eb8f85b
   name: vo.nextgeoss.eu
-- auth:
-    project_id: 7bb9c2694f9040c68cd72cb994f5ce89
-  name: worsica.eosc.eu
