--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
         eval "$(egicli endpoint token --site $EGI_SITE --project-id $PROJECT_ID)"
         echo "::add-mask::$OS_TOKEN"
         sed -i -e "s/secret/$OS_TOKEN/" clouds.yaml
+        mkdir -p ~/.config/openstack
         touch ~/.config/openstack/secure.yaml
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
