Adapt to new version

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,8 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v2.2.0
         with:
           images: egifedcloud/ops-cloud-info
-          tag-sha: true
+          tags: |
+            type=sha
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
