--- a/sites/IISAS-FedCloud-cloud.yaml
+++ b/sites/IISAS-FedCloud-cloud.yaml
@@ -16,4 +16,7 @@ vos:
 - auth:
     project_id: 071a2c4b52494bccbc3606d59d0e6951
   name: mteam.data.kit.edu
+- auth:
+    project_id: af0a1e8165b94365903088e00e34b063
+  name: cryoem.instruct-eric.eu
   
