Fix linting and update cloud-info-provider (#85)
* Fix linting and update cloud-info-provider

* Update cloud-info/Dockerfile

Co-authored-by: Baptiste Grenier <gwarf@gwarf.org>

--- a/cloud-info/Dockerfile
+++ b/cloud-info/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3
 
-
-ARG CLOUD_INFO_VERSION=3e7f3c76cb6abb34e9c30c16777992ff7101378b
+ARG CLOUD_INFO_VERSION=96ab000d7382477a84d494f101cfcf16c5377fe9
 
 # hadolint ignore=DL3013
 RUN pip install --no-cache-dir \
@@ -10,6 +9,7 @@ RUN pip install --no-cache-dir \
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
+# CA certificates: install and add to python
 # hadolint ignore=DL3015, DL3008
 RUN curl -Ls \
         https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 \
@@ -18,12 +18,10 @@ RUN curl -Ls \
         > /etc/apt/sources.list.d/cas.list \
     && apt-get update \
     && apt-get install -y jq ca-policy-egi-core \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
+    && rm -rf /var/lib/apt/lists/* \
+    && cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
 
 COPY ams-wrapper.sh /usr/local/bin/ams-wrapper.sh
 COPY publisher.sh /usr/local/bin/publisher.sh
 
 CMD ["publisher.sh"]
-
