--- a/sites/IFCA-LCG2.yaml
+++ b/sites/IFCA-LCG2.yaml
@@ -32,6 +32,9 @@ vos:
     project_id: 3b9754ad8c6046b4aec43ec21abe7d8c
   name: eosc-synergy.eu
 - auth:
+    project_id: 77c86367335f4e9cb1e9ccab72d24f0a
+  name: lagoproject.net
+- auth:
     project_id: 352db003073549749351fad26cd55074
   name: o3as.data.kit.edu
 - auth:
