--- a/sites/IISAS-GPUCloud.yaml
+++ b/sites/IISAS-GPUCloud.yaml
@@ -1,4 +1,5 @@
 endpoint: https://keystone3.ui.savba.sk:5000/v3/
+filename: IISAS-GPUCloud.yaml
 gocdb: IISAS-GPUCloud
 vos:
 - auth:
@@ -13,3 +14,9 @@ vos:
 - auth:
     project_id: 627905392d4d453cbd85e8d56b2367b0
   name: training.egi.eu
+- auth:
+    project_id: 6c8c9a38f957420b86e0cdeb58def770
+  name: mswss.ui.savba.sk
+- auth:
+    project_id: f82b19069f644c0dafcad4b7f6a4dac0
+  name: cryoem.instruct-eric.eu
