fix wrongly reported site names

--- a/sites/NCG-INGRID-PT.yaml
+++ b/sites/NCG-INGRID-PT.yaml
@@ -23,11 +23,5 @@ vos:
     project_id: 05e52356addc44e18ef2bd14f2e2f67d
   name: covid-synergy
 - auth:
-    project_id: a53ca78c534046e5b13f4537ae698411
-  name: worsica
-- auth:
-    project_id: ddf0c468c8af4e0bbb9808bfc0288381
-  name: eosc-synergy
-- auth:
     project_id: 14e8f964db4c4a8ea286b0886ab51e7c
-  name: lago
+  name: lagoproject.net
