--- a/sites/IFCA-LCG2.yaml
+++ b/sites/IFCA-LCG2.yaml
@@ -63,4 +63,4 @@ vos:
   name: vo.openbiomap.lifewatch.eu
 - auth:
     project_id: 7bb9c2694f9040c68cd72cb994f5ce89
-  name: worsica.eosc.eu
+  name: worsica.vo.incd.pt
