--- a/sites/TR-FC1-ULAKBIM.yaml
+++ b/sites/TR-FC1-ULAKBIM.yaml
@@ -25,3 +25,6 @@ vos:
 - auth:
     project_id: 4b607492b48c4d9c9942ca243ae16a58
   name: eiscat.se
+- auth:
+    project_id: a59bd0a9ed754941962846c4a081d6ca
+  name: vo.enes.org
